--- a/WSUI.Site/WordPressVersion/wp-content/themes/justlanded/style.css
+++ b/WSUI.Site/WordPressVersion/wp-content/themes/justlanded/style.css
@@ -4652,7 +4652,7 @@ input.wpcf7-submit:hover {
 }
 
 .button_gum {
-    background: #63c6ae;
+    background:#2985c6;
     color: #fff;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     -webkit-box-shadow: inset 0 2px rgba(255, 255, 255, 0.2), 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -4675,11 +4675,12 @@ input.wpcf7-submit:hover {
     top: 0px;
     left: 60px;
     width: 330px;
-    float: left;
+    float: none;
     border: 1px solid #cecece;
     background-color: #fff;
     border-radius: 4px;
     overflow: hidden;
+    margin: 0 auto;
 }
 #pricing-panel .button_gum {
     margin-bottom: 0;
