--- a/WSUI.Site/WordPressVersion/wp-content/themes/justlanded/style.css
+++ b/WSUI.Site/WordPressVersion/wp-content/themes/justlanded/style.css
@@ -4627,15 +4627,16 @@ input.wpcf7-submit:hover {
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
-    top: -100px;
-    left: 45px;
+    top: -45px;
+    left: 50px;
 }
 
 #the-price .price-number {
     font-size: 95px;
     line-height: 220px;
     letter-spacing: -12px;
-    margin-left: 35px;
+    margin-left: 50px;
+    /* margin: 0 auto; */
 }
 
 #the-price .price-text {
