--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -44,7 +44,7 @@
                  ContextMenu="{StaticResource ResourceKey=contextMenu}"
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
                  ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
-                 service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
+                 service:DoubleClickBehavior.DoubleClickHandler="{Binding DoubleClickCommand}"
                  HorizontalContentAlignment="Stretch"
                  >
         </listBox:WSUIListBox>
