--- a/WSUI.Module/View/EmailDataView.xaml
+++ b/WSUI.Module/View/EmailDataView.xaml
@@ -55,7 +55,7 @@
                         attachedProperty:ListBoxShouldSetSelectAttachedProperty.ShouldSetSelect="True"
                         ContextMenu="{StaticResource ResourceKey=contextMenu}"
                         ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
-                        service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
+                        service:DoubleClickBehavior.DoubleClickHandler="{Binding DoubleClickCommand}"
                         HorizontalContentAlignment="Stretch"
                       >
         </listBox:WSUIListBox>
