--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -1,18 +1,16 @@
 ﻿<UserControl x:Class="WSUI.Module.View.KindsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:localService="clr-namespace:WSUI.Module.Service"
             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-                              HorizontalContentAlignment="Stretch"
-             >
+                              HorizontalContentAlignment="Stretch">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Service/ResourceTemplate.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
 
             <Style x:Key="HorizotalMetroListBox" BasedOn="{StaticResource MetroListBox}" TargetType="{x:Type ListBox}">
                 <Setter Property="ItemsPanel">
@@ -30,7 +28,6 @@
                 <Setter Property="Width" Value="75"></Setter>
                 <Setter Property="Height" Value="22"></Setter>
             </Style>
-
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
@@ -44,18 +41,17 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-
-        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="0" Height="24" Padding="2" BorderThickness="0" Focusable="True" 
-                HorizontalAlignment="Center" 
-                HorizontalContentAlignment="Center" 
-                VerticalAlignment="Center" 
+        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="0" Height="24" Padding="2" BorderThickness="0" Focusable="True"
+                HorizontalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                VerticalAlignment="Center"
                 VerticalContentAlignment="Center"
-                IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}" 
-                IsTabStop="False" 
-                ToolTip="Back" 
-                Command="{Binding BackCommand}" 
-                Visibility="{Binding PreviewVisibility,UpdateSourceTrigger=PropertyChanged}">
-            <Grid Background="Transparent" >
+                IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
+                IsTabStop="False"
+                ToolTip="Back"
+                Command="{Binding BackCommand}"
+                Visibility="{Binding BackButtonVisibility,UpdateSourceTrigger=PropertyChanged}">
+            <Grid Background="Transparent">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -99,12 +95,11 @@
         <ListBox Grid.Column="1" Grid.Row="0" Style="{StaticResource HorizotalMetroListBox}" ItemsSource="{Binding KindsCollection}" Height="Auto"
                     SelectedItem="{Binding SelectedLazyKind,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                     ItemContainerStyle="{StaticResource WSUIMetroListBoxItem}"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto" 
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                  VerticalContentAlignment="Center"
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
-                 HorizontalAlignment="Right"
-                 >
+                 HorizontalAlignment="Right">
         </ListBox>
 
         <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
@@ -130,20 +125,18 @@
                 </TextBlock>
             </Grid>
 
-
-
         </Border>
 
-        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" x:Name="GridProgress" 
+        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" x:Name="GridProgress"
               Visibility="{Binding IsBusy,Converter={StaticResource BoolToVisibilityConverter},UpdateSourceTrigger=PropertyChanged}">
-            <Controls:ProgressIndicator HorizontalAlignment="Stretch" 
-                                        HorizontalContentAlignment="Stretch" 
-                                        Height="5" 
-                                        ProgressColour="DeepSkyBlue" 
-                                        Width="{Binding ElementName=GridProgress,Path=ActualWidth}"></Controls:ProgressIndicator>
+            <Controls:MetroProgressBar HorizontalAlignment="Stretch"
+                                        HorizontalContentAlignment="Stretch"
+                                        Height="5"
+                                        IsIndeterminate="True"
+                                       Minimum="0"
+                                       Maximum="100"
+                                       Foreground="{StaticResource AccentColorBrush}"
+                                        Width="{Binding ElementName=GridProgress,Path=ActualWidth}"></Controls:MetroProgressBar>
         </Grid>
-
-
     </Grid>
-
 </UserControl>
